--- a/application/views/test.edge
+++ b/application/views/test.edge
@@ -1,4 +1,17 @@
+<!doctype html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport"
+         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   {{style('https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css')}}
+   <title>Document</title>
+</head>
+<body>
+<h1>hello {{name}}</h1>
+</body>
+</html>
 
-<h1>hello {{data.name}}</h1>
-{{data.func()}}
+
 
